<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_filter_settings"
        android:icon="@drawable/ic_filter_list_grey_24dp"
        android:iconTint="@color/whiteMessaging"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/whiteMessaging"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:icon="@android:drawable/ic_dialog_email"
        android:iconTint="@color/whiteMessaging"
        android:title="@string/account"
        app:showAsAction="never" />

</menu>