<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nav_feedback"
        app:startDestination="@id/feedbackFragment"
        >

    <fragment android:id="@+id/feedbackFragment"
            android:name="com.cyberveda.client.ui.main.feedback.FeedbackFragment"
            android:label="@string/fragment_feedback"
            tools:layout="@layout/fragment_feedback">


        <action android:id="@+id/action_feedbackFragment_to_viewFeedbackFragment"
                app:destination="@id/viewFeedbackFragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                />

    </fragment>

    <fragment android:id="@+id/viewFeedbackFragment"
            android:name="com.cyberveda.client.ui.main.feedback.ViewFeedbackFragment"
            android:label="@string/fragment_view_feedback"
            tools:layout="@layout/fragment_view_feedback">


        <action android:id="@+id/action_viewFeedbackFragment_to_updateFeedbackFragment"
                app:destination="@id/updateFeedbackFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
                />

        <action
                android:id="@+id/action_viewFeedbackFragment_to_home"
                app:destination="@id/feedbackFragment"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"
                app:popUpTo="@+id/nav_feedback"
                app:popUpToInclusive="true" />

    </fragment>

    <fragment android:id="@+id/updateFeedbackFragment"
            android:name="com.cyberveda.client.ui.main.feedback.UpdateFeedbackFragment"
            android:label="@string/fragment_update_feedback"
            tools:layout="@layout/fragment_update_feedback">

        <action
                android:id="@+id/action_updateFeedbackFragment_to_home"
                app:destination="@id/feedbackFragment"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"
                app:popUpTo="@+id/nav_feedback"
                app:popUpToInclusive="true" />

    </fragment>
</navigation>